CompiladorDLP/bin/sintactico/y.output
   0  $accept : programa $end

   1  programa :
   2           | programa definiciones

   3  definiciones : definicionStruct
   4               | definicionFuncion
   5               | definicionVariable

   6  definicionVariable : "VAR" "IDENT" ':' tipo ';'

   7  tipo : "CHAR"
   8       | "REAL"
   9       | "INT"
  10       | "IDENT"
  11       | '[' "LITINT" ']' tipo

  12  definicionStruct : "STRUCT" "IDENT" '{' atributos '}' ';'

  13  atributos :
  14            | atributos atributo

  15  atributo : "IDENT" ':' tipo ';'

  16  definicionFuncion : cabecera '{' cuerpo '}'

  17  cabecera : "IDENT" '(' parametrosDeclaracion ')'
  18           | "IDENT" '(' parametrosDeclaracion ')' ':' tipo

  19  parametrosDeclaracion :
  20                        | listaDeclaracion

  21  listaDeclaracion : parametroDeclaracion
  22                   | listaDeclaracion ',' parametroDeclaracion

  23  parametroDeclaracion : "IDENT" ':' tipo

  24  cuerpo : declaracionVariable sentencias

  25  declaracionVariable :
  26                      | declaracionVariable dec

  27  dec : "VAR" "IDENT" ':' tipo ';'

  28  sentencias :
  29             | sentencias sentencia

  30  sentencia : "PRINT" expr ';'
  31            | "READ" expr ';'
  32            | asignacion
  33            | llamadaFuncion ';'
  34            | return
  35            | "IF" '(' expr ')' '{' sentencias '}'
  36            | "IF" '(' expr ')' '{' sentencias '}' "ELSE" '{' sentencias '}'
  37            | "WHILE" '(' expr ')' '{' sentencias '}'

  38  return : "RETURN" parametrosLlamada ';'

  39  expr : expr "EQUAL" expr
  40       | expr "DISTINT" expr
  41       | expr '<' expr
  42       | expr "IGUALMENORQUE" expr
  43       | expr '>' expr
  44       | expr "IGUALMAYORQUE" expr
  45       | expr "AND" expr
  46       | expr "OR" expr
  47       | expr '+' expr
  48       | expr '-' expr
  49       | expr '*' expr
  50       | expr '/' expr
  51       | '(' expr ')'
  52       | "CAST" '<' tipo '>' '(' expr ')'
  53       | expr '.' expr
  54       | "LITINT"
  55       | "LITREAL"
  56       | "LITCHAR"
  57       | "IDENT"
  58       | accesoArray
  59       | llamadaFuncion

  60  accesoArray : "IDENT" '[' expr ']' recursividadArray

  61  recursividadArray :
  62                    | '[' expr ']' recursividadArray

  63  asignacion : parteIzquierda '=' parteDerecha ';'

  64  parteIzquierda : "IDENT" recursividadArray
  65                 | parteIzquierda '.' parteIzquierda

  66  parteDerecha : expr

  67  llamadaFuncion : "IDENT" '(' parametrosLlamada ')'

  68  parametrosLlamada :
  69                    | listaLlamada

  70  listaLlamada : parametroLlamada
  71               | listaLlamada ',' parametroLlamada

  72  parametroLlamada : expr

state 0
	$accept : . programa $end  (0)
	programa : .  (1)

	.  reduce 1

	programa  goto 1


state 1
	$accept : programa . $end  (0)
	programa : programa . definiciones  (2)

	$end  accept
	"VAR"  shift 2
	"IDENT"  shift 3
	"STRUCT"  shift 4
	.  error

	definiciones  goto 5
	definicionStruct  goto 6
	definicionFuncion  goto 7
	definicionVariable  goto 8
	cabecera  goto 9


state 2
	definicionVariable : "VAR" . "IDENT" ':' tipo ';'  (6)

	"IDENT"  shift 10
	.  error


state 3
	cabecera : "IDENT" . '(' parametrosDeclaracion ')'  (17)
	cabecera : "IDENT" . '(' parametrosDeclaracion ')' ':' tipo  (18)

	'('  shift 11
	.  error


state 4
	definicionStruct : "STRUCT" . "IDENT" '{' atributos '}' ';'  (12)

	"IDENT"  shift 12
	.  error


state 5
	programa : programa definiciones .  (2)

	.  reduce 2


state 6
	definiciones : definicionStruct .  (3)

	.  reduce 3


state 7
	definiciones : definicionFuncion .  (4)

	.  reduce 4


state 8
	definiciones : definicionVariable .  (5)

	.  reduce 5


state 9
	definicionFuncion : cabecera . '{' cuerpo '}'  (16)

	'{'  shift 13
	.  error


state 10
	definicionVariable : "VAR" "IDENT" . ':' tipo ';'  (6)

	':'  shift 14
	.  error


state 11
	cabecera : "IDENT" '(' . parametrosDeclaracion ')'  (17)
	cabecera : "IDENT" '(' . parametrosDeclaracion ')' ':' tipo  (18)
	parametrosDeclaracion : .  (19)

	"IDENT"  shift 15
	')'  reduce 19

	parametrosDeclaracion  goto 16
	listaDeclaracion  goto 17
	parametroDeclaracion  goto 18


state 12
	definicionStruct : "STRUCT" "IDENT" . '{' atributos '}' ';'  (12)

	'{'  shift 19
	.  error


state 13
	definicionFuncion : cabecera '{' . cuerpo '}'  (16)
	declaracionVariable : .  (25)

	.  reduce 25

	cuerpo  goto 20
	declaracionVariable  goto 21


state 14
	definicionVariable : "VAR" "IDENT" ':' . tipo ';'  (6)

	"IDENT"  shift 22
	"CHAR"  shift 23
	"REAL"  shift 24
	"INT"  shift 25
	'['  shift 26
	.  error

	tipo  goto 27


state 15
	parametroDeclaracion : "IDENT" . ':' tipo  (23)

	':'  shift 28
	.  error


state 16
	cabecera : "IDENT" '(' parametrosDeclaracion . ')'  (17)
	cabecera : "IDENT" '(' parametrosDeclaracion . ')' ':' tipo  (18)

	')'  shift 29
	.  error


state 17
	parametrosDeclaracion : listaDeclaracion .  (20)
	listaDeclaracion : listaDeclaracion . ',' parametroDeclaracion  (22)

	','  shift 30
	')'  reduce 20


state 18
	listaDeclaracion : parametroDeclaracion .  (21)

	.  reduce 21


state 19
	definicionStruct : "STRUCT" "IDENT" '{' . atributos '}' ';'  (12)
	atributos : .  (13)

	.  reduce 13

	atributos  goto 31


state 20
	definicionFuncion : cabecera '{' cuerpo . '}'  (16)

	'}'  shift 32
	.  error


state 21
	cuerpo : declaracionVariable . sentencias  (24)
	declaracionVariable : declaracionVariable . dec  (26)
	sentencias : .  (28)

	"VAR"  shift 33
	"IDENT"  reduce 28
	'}'  reduce 28
	"PRINT"  reduce 28
	"READ"  reduce 28
	"IF"  reduce 28
	"WHILE"  reduce 28
	"RETURN"  reduce 28

	sentencias  goto 34
	dec  goto 35


state 22
	tipo : "IDENT" .  (10)

	.  reduce 10


state 23
	tipo : "CHAR" .  (7)

	.  reduce 7


state 24
	tipo : "REAL" .  (8)

	.  reduce 8


state 25
	tipo : "INT" .  (9)

	.  reduce 9


state 26
	tipo : '[' . "LITINT" ']' tipo  (11)

	"LITINT"  shift 36
	.  error


state 27
	definicionVariable : "VAR" "IDENT" ':' tipo . ';'  (6)

	';'  shift 37
	.  error


state 28
	parametroDeclaracion : "IDENT" ':' . tipo  (23)

	"IDENT"  shift 22
	"CHAR"  shift 23
	"REAL"  shift 24
	"INT"  shift 25
	'['  shift 26
	.  error

	tipo  goto 38


state 29
	cabecera : "IDENT" '(' parametrosDeclaracion ')' .  (17)
	cabecera : "IDENT" '(' parametrosDeclaracion ')' . ':' tipo  (18)

	':'  shift 39
	'{'  reduce 17


state 30
	listaDeclaracion : listaDeclaracion ',' . parametroDeclaracion  (22)

	"IDENT"  shift 15
	.  error

	parametroDeclaracion  goto 40


state 31
	definicionStruct : "STRUCT" "IDENT" '{' atributos . '}' ';'  (12)
	atributos : atributos . atributo  (14)

	"IDENT"  shift 41
	'}'  shift 42
	.  error

	atributo  goto 43


state 32
	definicionFuncion : cabecera '{' cuerpo '}' .  (16)

	.  reduce 16


state 33
	dec : "VAR" . "IDENT" ':' tipo ';'  (27)

	"IDENT"  shift 44
	.  error


state 34
	cuerpo : declaracionVariable sentencias .  (24)
	sentencias : sentencias . sentencia  (29)

	"IDENT"  shift 45
	"PRINT"  shift 46
	"READ"  shift 47
	"IF"  shift 48
	"WHILE"  shift 49
	"RETURN"  shift 50
	'}'  reduce 24

	sentencia  goto 51
	asignacion  goto 52
	llamadaFuncion  goto 53
	return  goto 54
	parteIzquierda  goto 55


state 35
	declaracionVariable : declaracionVariable dec .  (26)

	.  reduce 26


state 36
	tipo : '[' "LITINT" . ']' tipo  (11)

	']'  shift 56
	.  error


state 37
	definicionVariable : "VAR" "IDENT" ':' tipo ';' .  (6)

	.  reduce 6


state 38
	parametroDeclaracion : "IDENT" ':' tipo .  (23)

	.  reduce 23


state 39
	cabecera : "IDENT" '(' parametrosDeclaracion ')' ':' . tipo  (18)

	"IDENT"  shift 22
	"CHAR"  shift 23
	"REAL"  shift 24
	"INT"  shift 25
	'['  shift 26
	.  error

	tipo  goto 57


state 40
	listaDeclaracion : listaDeclaracion ',' parametroDeclaracion .  (22)

	.  reduce 22


state 41
	atributo : "IDENT" . ':' tipo ';'  (15)

	':'  shift 58
	.  error


state 42
	definicionStruct : "STRUCT" "IDENT" '{' atributos '}' . ';'  (12)

	';'  shift 59
	.  error


state 43
	atributos : atributos atributo .  (14)

	.  reduce 14


state 44
	dec : "VAR" "IDENT" . ':' tipo ';'  (27)

	':'  shift 60
	.  error


state 45
	parteIzquierda : "IDENT" . recursividadArray  (64)
	llamadaFuncion : "IDENT" . '(' parametrosLlamada ')'  (67)
	recursividadArray : .  (61)

	'['  shift 61
	'('  shift 62
	'.'  reduce 61
	'='  reduce 61

	recursividadArray  goto 63


state 46
	sentencia : "PRINT" . expr ';'  (30)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 70
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 47
	sentencia : "READ" . expr ';'  (31)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 73
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 48
	sentencia : "IF" . '(' expr ')' '{' sentencias '}'  (35)
	sentencia : "IF" . '(' expr ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (36)

	'('  shift 74
	.  error


state 49
	sentencia : "WHILE" . '(' expr ')' '{' sentencias '}'  (37)

	'('  shift 75
	.  error


state 50
	return : "RETURN" . parametrosLlamada ';'  (38)
	parametrosLlamada : .  (68)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	';'  reduce 68

	expr  goto 76
	llamadaFuncion  goto 71
	parametrosLlamada  goto 77
	accesoArray  goto 72
	listaLlamada  goto 78
	parametroLlamada  goto 79


state 51
	sentencias : sentencias sentencia .  (29)

	.  reduce 29


state 52
	sentencia : asignacion .  (32)

	.  reduce 32


state 53
	sentencia : llamadaFuncion . ';'  (33)

	';'  shift 80
	.  error


state 54
	sentencia : return .  (34)

	.  reduce 34


state 55
	asignacion : parteIzquierda . '=' parteDerecha ';'  (63)
	parteIzquierda : parteIzquierda . '.' parteIzquierda  (65)

	'.'  shift 81
	'='  shift 82
	.  error


state 56
	tipo : '[' "LITINT" ']' . tipo  (11)

	"IDENT"  shift 22
	"CHAR"  shift 23
	"REAL"  shift 24
	"INT"  shift 25
	'['  shift 26
	.  error

	tipo  goto 83


state 57
	cabecera : "IDENT" '(' parametrosDeclaracion ')' ':' tipo .  (18)

	.  reduce 18


state 58
	atributo : "IDENT" ':' . tipo ';'  (15)

	"IDENT"  shift 22
	"CHAR"  shift 23
	"REAL"  shift 24
	"INT"  shift 25
	'['  shift 26
	.  error

	tipo  goto 84


state 59
	definicionStruct : "STRUCT" "IDENT" '{' atributos '}' ';' .  (12)

	.  reduce 12


state 60
	dec : "VAR" "IDENT" ':' . tipo ';'  (27)

	"IDENT"  shift 22
	"CHAR"  shift 23
	"REAL"  shift 24
	"INT"  shift 25
	'['  shift 26
	.  error

	tipo  goto 85


state 61
	recursividadArray : '[' . expr ']' recursividadArray  (62)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 86
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 62
	llamadaFuncion : "IDENT" '(' . parametrosLlamada ')'  (67)
	parametrosLlamada : .  (68)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	')'  reduce 68

	expr  goto 76
	llamadaFuncion  goto 71
	parametrosLlamada  goto 87
	accesoArray  goto 72
	listaLlamada  goto 78
	parametroLlamada  goto 79


state 63
	parteIzquierda : "IDENT" recursividadArray .  (64)

	.  reduce 64


state 64
	expr : "IDENT" .  (57)
	accesoArray : "IDENT" . '[' expr ']' recursividadArray  (60)
	llamadaFuncion : "IDENT" . '(' parametrosLlamada ')'  (67)

	'['  shift 88
	'('  shift 62
	"OR"  reduce 57
	"AND"  reduce 57
	'>'  reduce 57
	'<'  reduce 57
	"IGUALMENORQUE"  reduce 57
	"IGUALMAYORQUE"  reduce 57
	"EQUAL"  reduce 57
	"DISTINT"  reduce 57
	'+'  reduce 57
	'-'  reduce 57
	'*'  reduce 57
	'/'  reduce 57
	'.'  reduce 57
	';'  reduce 57
	']'  reduce 57
	')'  reduce 57
	','  reduce 57


state 65
	expr : "LITINT" .  (54)

	.  reduce 54


state 66
	expr : '(' . expr ')'  (51)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 89
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 67
	expr : "CAST" . '<' tipo '>' '(' expr ')'  (52)

	'<'  shift 90
	.  error


state 68
	expr : "LITREAL" .  (55)

	.  reduce 55


state 69
	expr : "LITCHAR" .  (56)

	.  reduce 56


state 70
	sentencia : "PRINT" expr . ';'  (30)
	expr : expr . "EQUAL" expr  (39)
	expr : expr . "DISTINT" expr  (40)
	expr : expr . '<' expr  (41)
	expr : expr . "IGUALMENORQUE" expr  (42)
	expr : expr . '>' expr  (43)
	expr : expr . "IGUALMAYORQUE" expr  (44)
	expr : expr . "AND" expr  (45)
	expr : expr . "OR" expr  (46)
	expr : expr . '+' expr  (47)
	expr : expr . '-' expr  (48)
	expr : expr . '*' expr  (49)
	expr : expr . '/' expr  (50)
	expr : expr . '.' expr  (53)

	"OR"  shift 91
	"AND"  shift 92
	'>'  shift 93
	'<'  shift 94
	"IGUALMENORQUE"  shift 95
	"IGUALMAYORQUE"  shift 96
	"EQUAL"  shift 97
	"DISTINT"  shift 98
	'+'  shift 99
	'-'  shift 100
	'*'  shift 101
	'/'  shift 102
	'.'  shift 103
	';'  shift 104
	.  error


state 71
	expr : llamadaFuncion .  (59)

	.  reduce 59


state 72
	expr : accesoArray .  (58)

	.  reduce 58


state 73
	sentencia : "READ" expr . ';'  (31)
	expr : expr . "EQUAL" expr  (39)
	expr : expr . "DISTINT" expr  (40)
	expr : expr . '<' expr  (41)
	expr : expr . "IGUALMENORQUE" expr  (42)
	expr : expr . '>' expr  (43)
	expr : expr . "IGUALMAYORQUE" expr  (44)
	expr : expr . "AND" expr  (45)
	expr : expr . "OR" expr  (46)
	expr : expr . '+' expr  (47)
	expr : expr . '-' expr  (48)
	expr : expr . '*' expr  (49)
	expr : expr . '/' expr  (50)
	expr : expr . '.' expr  (53)

	"OR"  shift 91
	"AND"  shift 92
	'>'  shift 93
	'<'  shift 94
	"IGUALMENORQUE"  shift 95
	"IGUALMAYORQUE"  shift 96
	"EQUAL"  shift 97
	"DISTINT"  shift 98
	'+'  shift 99
	'-'  shift 100
	'*'  shift 101
	'/'  shift 102
	'.'  shift 103
	';'  shift 105
	.  error


state 74
	sentencia : "IF" '(' . expr ')' '{' sentencias '}'  (35)
	sentencia : "IF" '(' . expr ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (36)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 106
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 75
	sentencia : "WHILE" '(' . expr ')' '{' sentencias '}'  (37)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 107
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 76
	expr : expr . "EQUAL" expr  (39)
	expr : expr . "DISTINT" expr  (40)
	expr : expr . '<' expr  (41)
	expr : expr . "IGUALMENORQUE" expr  (42)
	expr : expr . '>' expr  (43)
	expr : expr . "IGUALMAYORQUE" expr  (44)
	expr : expr . "AND" expr  (45)
	expr : expr . "OR" expr  (46)
	expr : expr . '+' expr  (47)
	expr : expr . '-' expr  (48)
	expr : expr . '*' expr  (49)
	expr : expr . '/' expr  (50)
	expr : expr . '.' expr  (53)
	parametroLlamada : expr .  (72)

	"OR"  shift 91
	"AND"  shift 92
	'>'  shift 93
	'<'  shift 94
	"IGUALMENORQUE"  shift 95
	"IGUALMAYORQUE"  shift 96
	"EQUAL"  shift 97
	"DISTINT"  shift 98
	'+'  shift 99
	'-'  shift 100
	'*'  shift 101
	'/'  shift 102
	'.'  shift 103
	';'  reduce 72
	')'  reduce 72
	','  reduce 72


state 77
	return : "RETURN" parametrosLlamada . ';'  (38)

	';'  shift 108
	.  error


state 78
	parametrosLlamada : listaLlamada .  (69)
	listaLlamada : listaLlamada . ',' parametroLlamada  (71)

	','  shift 109
	';'  reduce 69
	')'  reduce 69


state 79
	listaLlamada : parametroLlamada .  (70)

	.  reduce 70


state 80
	sentencia : llamadaFuncion ';' .  (33)

	.  reduce 33


state 81
	parteIzquierda : parteIzquierda '.' . parteIzquierda  (65)

	"IDENT"  shift 110
	.  error

	parteIzquierda  goto 111


state 82
	asignacion : parteIzquierda '=' . parteDerecha ';'  (63)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 112
	llamadaFuncion  goto 71
	accesoArray  goto 72
	parteDerecha  goto 113


state 83
	tipo : '[' "LITINT" ']' tipo .  (11)

	.  reduce 11


state 84
	atributo : "IDENT" ':' tipo . ';'  (15)

	';'  shift 114
	.  error


state 85
	dec : "VAR" "IDENT" ':' tipo . ';'  (27)

	';'  shift 115
	.  error


state 86
	expr : expr . "EQUAL" expr  (39)
	expr : expr . "DISTINT" expr  (40)
	expr : expr . '<' expr  (41)
	expr : expr . "IGUALMENORQUE" expr  (42)
	expr : expr . '>' expr  (43)
	expr : expr . "IGUALMAYORQUE" expr  (44)
	expr : expr . "AND" expr  (45)
	expr : expr . "OR" expr  (46)
	expr : expr . '+' expr  (47)
	expr : expr . '-' expr  (48)
	expr : expr . '*' expr  (49)
	expr : expr . '/' expr  (50)
	expr : expr . '.' expr  (53)
	recursividadArray : '[' expr . ']' recursividadArray  (62)

	"OR"  shift 91
	"AND"  shift 92
	'>'  shift 93
	'<'  shift 94
	"IGUALMENORQUE"  shift 95
	"IGUALMAYORQUE"  shift 96
	"EQUAL"  shift 97
	"DISTINT"  shift 98
	'+'  shift 99
	'-'  shift 100
	'*'  shift 101
	'/'  shift 102
	'.'  shift 103
	']'  shift 116
	.  error


state 87
	llamadaFuncion : "IDENT" '(' parametrosLlamada . ')'  (67)

	')'  shift 117
	.  error


state 88
	accesoArray : "IDENT" '[' . expr ']' recursividadArray  (60)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 118
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 89
	expr : expr . "EQUAL" expr  (39)
	expr : expr . "DISTINT" expr  (40)
	expr : expr . '<' expr  (41)
	expr : expr . "IGUALMENORQUE" expr  (42)
	expr : expr . '>' expr  (43)
	expr : expr . "IGUALMAYORQUE" expr  (44)
	expr : expr . "AND" expr  (45)
	expr : expr . "OR" expr  (46)
	expr : expr . '+' expr  (47)
	expr : expr . '-' expr  (48)
	expr : expr . '*' expr  (49)
	expr : expr . '/' expr  (50)
	expr : '(' expr . ')'  (51)
	expr : expr . '.' expr  (53)

	"OR"  shift 91
	"AND"  shift 92
	'>'  shift 93
	'<'  shift 94
	"IGUALMENORQUE"  shift 95
	"IGUALMAYORQUE"  shift 96
	"EQUAL"  shift 97
	"DISTINT"  shift 98
	'+'  shift 99
	'-'  shift 100
	'*'  shift 101
	'/'  shift 102
	'.'  shift 103
	')'  shift 119
	.  error


state 90
	expr : "CAST" '<' . tipo '>' '(' expr ')'  (52)

	"IDENT"  shift 22
	"CHAR"  shift 23
	"REAL"  shift 24
	"INT"  shift 25
	'['  shift 26
	.  error

	tipo  goto 120


state 91
	expr : expr "OR" . expr  (46)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 121
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 92
	expr : expr "AND" . expr  (45)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 122
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 93
	expr : expr '>' . expr  (43)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 123
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 94
	expr : expr '<' . expr  (41)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 124
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 95
	expr : expr "IGUALMENORQUE" . expr  (42)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 125
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 96
	expr : expr "IGUALMAYORQUE" . expr  (44)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 126
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 97
	expr : expr "EQUAL" . expr  (39)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 127
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 98
	expr : expr "DISTINT" . expr  (40)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 128
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 99
	expr : expr '+' . expr  (47)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 129
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 100
	expr : expr '-' . expr  (48)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 130
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 101
	expr : expr '*' . expr  (49)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 131
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 102
	expr : expr '/' . expr  (50)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 132
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 103
	expr : expr '.' . expr  (53)

	"IDENT"  shift 64
	"LITINT"  shift 65
	'('  shift 66
	"CAST"  shift 67
	"LITREAL"  shift 68
	"LITCHAR"  shift 69
	.  error

	expr  goto 133
	llamadaFuncion  goto 71
	accesoArray  goto 72


state 104
	sentencia : "PRINT" expr ';' .  (30)

	.  reduce 30


state 105
	sentencia : "READ" expr ';' .  (31)

	.  reduce 31


state 106
	sentencia : "IF" '(' expr . ')' '{' sentencias '}'  (35)
	sentencia : "IF" '(' expr . ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (36)
	expr : expr . "EQUAL" expr  (39)
	expr : expr . "DISTINT" expr  (40)
	expr : expr . '<' expr  (41)
	expr : expr . "IGUALMENORQUE" expr  (42)
	expr : expr . '>' expr  (43)
	expr : expr . "IGUALMAYORQUE" expr  (44)
	expr : expr . "AND" expr  (45)
	expr : expr . "OR" expr  (46)
	expr : expr . '+' expr  (47)
	expr : expr . '-' expr  (48)
	expr : expr . '*' expr  (49)
